<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:orientation="vertical"
        android:layout_margin="@dimen/margem">

        <LinearLayout
            android:id="@+id/lblDados"
            android:layout_width="match_parent"
            android:layout_height="150sp"
            android:orientation="vertical"
            android:visibility="invisible"
            android:background="@color/teal_200"
            android:padding="@dimen/margem">

            <TextView
                android:id="@+id/txtText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margem"
            android:text="@string/text" />

        <EditText
            android:id="@+id/edtText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tamanho"
            android:layout_margin="@dimen/margem"/>

        <SeekBar
            android:id="@+id/skbTamanhoLetra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="255"
            android:layout_margin="@dimen/margem"/>



        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">

            <CheckBox
                android:id="@+id/chkNegrito"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/negrito"/>

            <CheckBox
                android:id="@+id/chkItalico"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/italico"/>

            <CheckBox
                android:id="@+id/chkMaiusculas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/maiusculas"/>

        </LinearLayout>


        <RadioGroup
            android:id="@+id/rdgCorLetra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rdbVermelho"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/vermelho" />

            <RadioButton
                android:id="@+id/rdbAmarelo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/amarelo" />

            <RadioButton
                android:id="@+id/rdbVerde"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/verde" />
        </RadioGroup>

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@android:drawable/stat_sys_upload" />

    </LinearLayout>
</ScrollView>